fix: content z-index

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -52,7 +52,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  z-index: 1;
+  z-index: 2;
 }
 
 .layout {
@@ -162,7 +162,7 @@ body {
   width: 240px;
   background-color: #f0f0f0;
   height: 100vh;
-  z-index: 0;
+  z-index: 1;
   border-left: 1px solid #ddd;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
   border-radius: 0px 16px 16px 0px;
